src/component/treemap/snapshots/envision__component__treemap__snapshot_tests__snapshot_disabled.snap
---
source: src/component/treemap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Disabled──────────────────────────────┐
│         a                  b         │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Selected: a — 50.0 (50.0%)            │
└──────────────────────────────────────┘
