src/component/treemap/snapshots/envision__component__treemap__snapshot_tests__snapshot_empty.snap
---
source: src/component/treemap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
