src/component/treemap/snapshots/envision__component__treemap__snapshot_tests__snapshot_focused.snap
---
source: src/component/treemap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Focused Treemap───────────────────────┐
│         alpha              beta      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Selected: alpha — 60.0 (60.0%)        │
└──────────────────────────────────────┘
