src/component/treemap/snapshots/envision__component__treemap__snapshot_tests__snapshot_selection_moved.snap
---
source: src/component/treemap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│     first        second      third   │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Selected: second — 30.0 (30.0%)       │
└──────────────────────────────────────┘
