src/component/treemap/snapshots/envision__component__treemap__snapshot_tests__snapshot_simple.snap
---
source: src/component/treemap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│          src             docs    te..│
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Selected: src — 60.0 (60.0%)          │
└──────────────────────────────────────┘
