src/component/treemap/snapshots/envision__component__treemap__snapshot_tests__snapshot_single_child.snap
---
source: src/component/treemap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Single──────────────────────┐
│            only            │
│                            │
│                            │
│                            │
│                            │
│Selected: only — 100.0 (10  │
└────────────────────────────┘
