src/component/treemap/snapshots/envision__component__treemap__snapshot_tests__snapshot_with_values.snap
---
source: src/component/treemap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Values────────────────────────────────┐
│            big              med  sm..│
│           70.0             20.0   10 │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Selected: big — 70.0 (70.0%)          │
└──────────────────────────────────────┘
