src/component/treemap/snapshots/envision__component__treemap__snapshot_tests__snapshot_zoomed_in.snap
---
source: src/component/treemap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Zoomed────────────────────────────────┐
│        main.rs            lib.rs     │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Selected: main.rs — 30.0 (60.0%)      │
└──────────────────────────────────────┘
