src/component/treemap/snapshots/envision__component__treemap__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/treemap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
           src              docs    te..
                                        
                                        
                                        
                                        
                                        
                                        
Selected: src — 60.0 (60.0%)
